[gd_scene load_steps=8 format=2]

[ext_resource path="res://Courses/TopicBtn.tscn" type="PackedScene" id=1]
[ext_resource path="res://Courses/Python/Course.gd" type="Script" id=2]
[ext_resource path="res://Sprites/ChiKareGo2.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=1]
size = 26
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 12
font_data = ExtResource( 3 )

[node name="Course" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.188235, 0.32549, 0.552941, 1 )

[node name="Back" type="Button" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 55.0
margin_bottom = 40.0
rect_min_size = Vector2( 45, 30 )
custom_fonts/font = SubResource( 4 )
text = "Back"

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -175.0
margin_right = 175.0
custom_constants/margin_top = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_top = 20.0
margin_right = 350.0
margin_bottom = 255.0
custom_constants/separation = 20

[node name="Headline" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 350.0
margin_bottom = 25.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Select Topic"
align = 1

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 45.0
margin_right = 350.0
margin_bottom = 165.0
custom_constants/vseparation = 20
custom_constants/hseparation = 20
columns = 3

[node name="Topic1" parent="MarginContainer/VBoxContainer/GridContainer" instance=ExtResource( 1 )]
margin_left = 12.0
margin_right = 92.0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_fonts/font = SubResource( 5 )
text = "1"
topic_path = "res://Levels/Python/Level1/Level1.tscn"

[node name="Topic2" parent="MarginContainer/VBoxContainer/GridContainer" instance=ExtResource( 1 )]
margin_left = 135.0
margin_right = 215.0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_fonts/font = SubResource( 5 )
text = "2"
topic_path = "res://Levels/Python/Level2/Level2.tscn"

[node name="Topic3" parent="MarginContainer/VBoxContainer/GridContainer" instance=ExtResource( 1 )]
margin_left = 258.0
margin_right = 338.0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_fonts/font = SubResource( 5 )
text = "3"
topic_path = "res://Levels/Python/Level3/Level3.tscn"

[node name="Topic4" parent="MarginContainer/VBoxContainer/GridContainer" instance=ExtResource( 1 )]
margin_left = 12.0
margin_top = 70.0
margin_right = 92.0
margin_bottom = 120.0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_fonts/font = SubResource( 5 )
text = "4"

[node name="Topic5" parent="MarginContainer/VBoxContainer/GridContainer" instance=ExtResource( 1 )]
margin_left = 135.0
margin_top = 70.0
margin_right = 215.0
margin_bottom = 120.0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_fonts/font = SubResource( 5 )
text = "5"

[node name="Topic6" parent="MarginContainer/VBoxContainer/GridContainer" instance=ExtResource( 1 )]
margin_left = 258.0
margin_top = 70.0
margin_right = 338.0
margin_bottom = 120.0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_fonts/font = SubResource( 5 )
text = "6"

[node name="ColorRect" type="ColorRect" parent="MarginContainer/VBoxContainer"]
margin_top = 185.0
margin_right = 350.0
margin_bottom = 235.0
rect_min_size = Vector2( 350, 50 )

[node name="Description" type="Label" parent="MarginContainer/VBoxContainer/ColorRect"]
margin_right = 350.0
margin_bottom = 50.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1
autowrap = true

[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/GridContainer/Topic1" to="." method="_on_Topic1_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/GridContainer/Topic1" to="." method="_on_Topic1_mouse_exited"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/GridContainer/Topic2" to="." method="_on_Topic2_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/GridContainer/Topic2" to="." method="_on_Topic2_mouse_exited"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/GridContainer/Topic3" to="." method="_on_Topic3_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/GridContainer/Topic3" to="." method="_on_Topic3_mouse_exited"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/GridContainer/Topic4" to="." method="_on_Topic4_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/GridContainer/Topic4" to="." method="_on_Topic4_mouse_exited"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/GridContainer/Topic5" to="." method="_on_Topic5_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/GridContainer/Topic5" to="." method="_on_Topic5_mouse_exited"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/GridContainer/Topic6" to="." method="_on_Topic6_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/GridContainer/Topic6" to="." method="_on_Topic6_mouse_exited"]
